--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
       <p>FLATI &copy; 2018 - All Rights Reserver: Template by Spiral Pisel</p>
     </footer>
     <!-- end of footer section -->
+    <!--  script  -->
     <script src="./public/js/script.js"></script>
   </body>
 </html>
